--- a/contact.html
+++ b/contact.html
@@ -442,7 +442,7 @@
                 </div>
                 <div class="col-lg-8">
                     <div class="sec-title">
-                        <h2>Don’t hesitate <br> to send your message to us</h2>
+                        <h2>Get free consultation 30 min</h2>
                         <div class="text-decoration">
                             <span class="left"></span>
                             <span class="right"></span>
