--- a/index.html
+++ b/index.html
@@ -67,8 +67,18 @@
                 <div class="inner-container clearfix">
                     <!--Logo-->
                     <div class="logo-box">
-                        <div class="logo"><a href="index.html">
-                            <img src="assets/images/icones.png" alt="" class="logo-bolshe"></a>
+                        <div class="logo">
+                            <a 
+                                style="
+                                display: inline-block; 
+                                width: 220px; 
+                                height: 70px; 
+                                background: url(assets/images/icons/astra.svg) 0 -30px no-repeat;
+                                background-size: cover;" 
+                                href="index.html">
+                                <!-- <img style="width: 200px;" src="assets/images/icons/astra.svg" alt=""> -->
+                            </a>
+                            <a href="tel:" class="number">7865326887</a>
                         </div>
                     </div>
                     <!--Nav Box-->
@@ -102,7 +112,18 @@
                     <div class="inner-container clearfix">
                         <!--Logo-->
                         <div class="logo-box">
-                            <div class="logo"><a href="index.html"><img src="assets/images/icones.png" alt=""></a></div>
+                            <div class="logo"><a 
+                                style="
+                                display: inline-block; 
+                                width: 250px; 
+                                height: 70px; 
+                                background: url(assets/images/icons/astra.svg) 0 -30px no-repeat;
+                                background-size: cover;" 
+                                href="index.html">
+                                <!-- <img style="width: 200px;" src="assets/images/icons/astra.svg" alt=""> -->
+                            </a>
+                            <a href="tel:" class="number">7865326887</a>
+                            </div>
                         </div>
                         <!--Nav Box-->
                         <div class="nav-outer clearfix">
